erDiagram
    PROFILES {
        uuid id PK
        text display_name
        text role "creator | brand"
        timestamptz created_at
        timestamptz updated_at
    }

    AUTH_IDENTITIES {
        text provider PK
        text subject PK
        uuid profile_id FK
    }

    CREATOR_PROFILES {
        uuid profile_id PK,FK
        text bio
        text instagram_handle
        text_array languages
        text_array topics
        text location
        text_array deal_preferences
        text_array portfolio_urls
    }

    BRANDS {
        uuid id PK
        text name
        text description
        text website
        text industry
        text location
        timestamptz created_at
    }

    BRAND_MEMBERS {
        uuid brand_id PK,FK
        uuid profile_id PK,FK
        text role "owner | member"
    }

    CAMPAIGNS {
        uuid id PK
        uuid brand_id FK
        text title
        text product_name
        text description
        text deal_type "barter | paid"
        integer amount_per_reel_minor
        integer product_value_minor
        text currency
        integer reel_count
        integer creator_slots
        text status "draft | published | closed | archived"
        timestamptz application_deadline
        text product_image_url
        integer reel_length_seconds
        timestamptz content_deadline
        boolean shipping_required
        text shipping_notes
        text_array required_mentions
        integer min_posting_duration_days
        integer usage_duration_days
        text_array usage_channels
        boolean usage_paid_ads_allowed
        timestamptz created_at
        timestamptz updated_at
    }

    APPLICATIONS {
        uuid id PK
        uuid campaign_id FK
        uuid creator_id FK
        text status "pending | accepted | rejected | withdrawn"
        text pitch
        timestamptz created_at
    }

    COLLABORATIONS {
        uuid id PK
        uuid application_id FK "UNIQUE"
        text status "negotiating | active | submitted | completed | cancelled"
        timestamptz created_at
    }

    REEL_SUBMISSIONS {
        uuid id PK
        uuid collaboration_id FK
        text instagram_url
        timestamptz created_at
    }

    MESSAGES {
        uuid id PK
        uuid collaboration_id FK
        uuid sender_id FK
        text body
        timestamptz created_at
    }

    AUTH_USERS {
        text id PK
        text name
        text email UK
        boolean emailVerified
        text image
        timestamptz createdAt
        timestamptz updatedAt
    }

    AUTH_SESSIONS {
        text id PK
        text token UK
        timestamptz expiresAt
        text ipAddress
        text userAgent
        text userId FK
        timestamptz createdAt
        timestamptz updatedAt
    }

    AUTH_ACCOUNTS {
        text id PK
        text accountId
        text providerId
        text userId FK
        text accessToken
        text refreshToken
        text idToken
        timestamptz accessTokenExpiresAt
        timestamptz refreshTokenExpiresAt
        text scope
        text password
        timestamptz createdAt
        timestamptz updatedAt
    }

    AUTH_VERIFICATIONS {
        text id PK
        text identifier
        text value
        timestamptz expiresAt
        timestamptz createdAt
        timestamptz updatedAt
    }

    AUTH_MAIL_OUTBOX {
        uuid id PK
        text recipient
        text subject
        text body
        integer attempts
        timestamptz available_at
        timestamptz created_at
    }

    PROFILES ||--o{ AUTH_IDENTITIES : "has identities"
    PROFILES ||--o| CREATOR_PROFILES : "creator extension"
    PROFILES ||--o{ BRAND_MEMBERS : "belongs to brands"
    BRANDS ||--o{ BRAND_MEMBERS : "has members"
    BRANDS ||--o{ CAMPAIGNS : "creates"
    CAMPAIGNS ||--o{ APPLICATIONS : "receives"
    CREATOR_PROFILES ||--o{ APPLICATIONS : "submits"
    APPLICATIONS ||--o| COLLABORATIONS : "may become"
    COLLABORATIONS ||--o{ REEL_SUBMISSIONS : "has"
    COLLABORATIONS ||--o{ MESSAGES : "contains"
    PROFILES ||--o{ MESSAGES : "sends"

    AUTH_USERS ||--o{ AUTH_SESSIONS : "has"
    AUTH_USERS ||--o{ AUTH_ACCOUNTS : "has"
